k8s/app/fintracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintracker-deployment
  labels:
    app: fintracker
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: fintracker
  template:
    metadata:
      labels:
        app: fintracker
    spec:
      containers:
        - name: fintracker
          image: localhost:5000/fintracker:0.3.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: fintracker-storage
              mountPath: /app-data
      volumes:
        - name: fintracker-storage
          persistentVolumeClaim:
            claimName: fintracker-pvc
      securityContext:
        fsGroup: 1001
