k8s/app/fintracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintracker-service
spec:
  selector:
    app: fintracker
  ports:
    - protocol: TCP
      port: 8484
      targetPort: 8080
