k8s/app/fintracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintracker-ingress
spec:
  rules:
    - host: fintracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fintracker-service
                port:
                  number: 8484
